---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" (
      "public"."peoples"."first-name",
      "public"."peoples"."last-name"
    )
  VALUES
    ($0, $1) RETURNING *
),
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    $2 :: TEXT AS "type",
    JSON_BUILD_OBJECT($3, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
  WHERE
    "public"."favorite_color"."id" IN (
      SELECT
        "cte_peoples_insert"."favorite_color"
      FROM
        "cte_peoples_insert"
    )
),
"cte_rel_articles_id" AS (
  VALUES
    ($4 :: uuid),
    ($5 :: uuid)
),
"cte_rel_articles_insert" AS (
  INSERT INTO
    "public"."people-article" (
      "public"."people-article"."article_id",
      "public"."people-article"."people_id"
    )
  SELECT
    "cte_peoples_data"."id" AS "article_id",
    "cte_rel_articles_id"."id" AS "people_id"
  FROM
    "cte_peoples_data",
    "cte_rel_articles_id" RETURNING "public"."people-article"."id",
    "public"."people-article"."article_id",
    "public"."people-article"."people_id"
),
"cte_rel_articles_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    $6 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $7,
      "public"."people-article"."article_id",
      $8,
      "public"."people-article"."people_id"
    ) AS "data"
  FROM
    "public"."people-article"
  WHERE
    "public"."people-article"."people_id" = "cte_peoples_data"."id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $10,
      "public"."articles"."body",
      $11,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_rel_articles_rel_data"."article_id"
      FROM
        "cte_rel_articles_rel_data"
    )
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    $12 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $13,
      "cte_peoples_insert"."age",
      $14,
      "cte_peoples_insert"."first-name",
      $15,
      "cte_peoples_insert"."gender",
      $16,
      "cte_peoples_insert"."last-name",
      $17,
      "cte_peoples_insert"."twitter"
    ) AS "data"
  FROM
    "cte_peoples_insert"
)
SELECT
  *
FROM
  "cte_rel_articles_data"
UNION
ALL
SELECT
  *
FROM
  "cte_favorite_color_data"
UNION
ALL
SELECT
  *
FROM
  "cte_rel_articles_rel_data"
UNION
ALL
SELECT
  *
FROM
  "cte_peoples_data";
